tests/paczka1/small_fuzzy/52293492.err
Error in line 3: HbMT6 A604 0,2
Error in line 7: cDs8EdWoa42 S308 49,9
